chingam - blog page edit.

--- a/blog.html
+++ b/blog.html
@@ -52,6 +52,27 @@
                             
                         </div>
                     </div>
+
+                    <div class="card ml-5 mb-4 mt-4 shadow" style="width: 19rem;">
+                        <img class="card-img-top" src="images/post/chingam.jpg" height="200px" style="object-fit: cover;" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title text-primary"> <a href="posts/chingam.html" class="">പുതുവഴികളിലൂടെ തിരിച്ചു പിടിക്കാം പഴമയുടെ കാർഷിക സംസ്കൃതി </a></h5>
+                          <p class="text-small">17-08-2022</p>
+                          <p class="card-text">കർക്കിടക പെയ്ത്തിന്റെ  ദുരിതങ്ങൾ മറന്ന് സമൃദ്ധിയുടെ ഒരു ചിങ്ങമാസത്തെ സഹർഷം വരവേൽക്കുകയാണ് ലോക മലയാളികൾ. ചിങ്ങം ഒന്ന് മലയാളിയുടെ...</p>
+                          <a href="posts/chingam.html" class="btn btn-link btn-sm text-small pl-0">Read More ...</a><br>
+                            <span class="badge badge-light">chingam</span>
+                            <!-- <span class="badge badge-light">label2</span> -->
+                            <!-- <span class="badge badge-light">label3</span> -->
+                        </div>
+                        <div class="card-footer">
+                            <img class="rounded-circle z-depth-2" alt="100x100" width="30px" src="images/sajil.png" data-holder-rendered="true">
+                            <div class="d-inline">
+                                <small class="text-muted pl-2 ">By <span class="text-info"> Sajil P N </span> </small><br>
+                            </div>
+                            
+                        </div>
+                    </div>
+
                     <!-- <div class="card ml-5 mb-4 mt-4 shadow" style="width: 19rem;">
                         <img class="card-img-top" src="images/logo1.svg" alt="Card image cap">
                         <div class="card-body">
